Fix vertical align

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .project-tagline {
-    height: 4em;
+    height: 5em;
     background-image: url('../under-construction-GIF.gif');
     background-repeat: no-repeat;
     background-position: top;
